-- ============================================================
-- CRM Insight — Seed Data (Realista e Volumoso)
-- UUIDs fixos para permitir referência cruzada entre tabelas
-- ID format: aXYYYYYYY-0000-0000-0000-00000000000Z
--   X = entity type (0=vendedor, 1=cliente, 2=venda, 3=interacao)
--   Y = sequential
--   Z = check digit (ignored, just for readability)
-- ============================================================

-- ===== VENDEDORES (8 vendedores com ranks variados) =====
INSERT INTO vendedor (id, nome, matricula, data_admissao, meta_mensal, comissao_base, rank)
VALUES
-- Vendedores TOP (OURO)
(UUID 'a0000001-0000-0000-0000-000000000001', 'Carlos Alberto Silva', 'V001', '2020-01-15', 65000.00, 3200.00, 'OURO'),
(UUID 'a0000002-0000-0000-0000-000000000002', 'Ana Beatriz Santos', 'V002', '2019-11-01', 60000.00, 3000.00, 'OURO'),
(UUID 'a0000003-0000-0000-0000-000000000003', 'Roberto Fernandes Lima', 'V003', '2018-03-20', 58000.00, 2900.00, 'OURO'),

-- Vendedores PRATA
(UUID 'a0000004-0000-0000-0000-000000000004', 'Maria Fernanda Costa', 'V004', '2021-03-10', 40000.00, 2000.00, 'PRATA'),
(UUID 'a0000005-0000-0000-0000-000000000005', 'Patrícia Oliveira Souza', 'V005', '2021-08-05', 38000.00, 1900.00, 'PRATA'),

-- Vendedores BRONZE
(UUID 'a0000006-0000-0000-0000-000000000006', 'João Pedro Oliveira', 'V006', '2022-06-20', 25000.00, 1250.00, 'BRONZE'),
(UUID 'a0000007-0000-0000-0000-000000000007', 'Luciana Mendes Rocha', 'V007', '2023-02-14', 22000.00, 1100.00, 'BRONZE'),

-- Vendedor TREINAMENTO
(UUID 'a0000008-0000-0000-0000-000000000008', 'Lucas Henrique Lima', 'V008', '2025-01-08', 12000.00, 600.00, 'TREINAMENTO');

-- ===== CLIENTES (25 clientes, segmentos variados, entrada 2020-2026) =====
INSERT INTO cliente (id, nome, segmento, data_entrada, score)
VALUES
-- Clientes Premium (score 80-100) - 6 clientes
(UUID 'a1000001-0000-0000-0000-000000000001', 'TechSolucoes Ltda', 'Tecnologia', '2020-02-10', 92),
(UUID 'a1000002-0000-0000-0000-000000000002', 'Hospital São Lucas', 'Saúde', '2020-05-18', 95),
(UUID 'a1000003-0000-0000-0000-000000000003', 'Indústria Nacional ABC', 'Indústria', '2020-08-03', 96),
(UUID 'a1000004-0000-0000-0000-000000000004', 'Banco Regional S.A.', 'Financeiro', '2021-01-20', 88),
(UUID 'a1000005-0000-0000-0000-000000000005', 'Distribuidora LogCenter', 'Logística', '2021-04-12', 85),
(UUID 'a1000006-0000-0000-0000-000000000006', 'Clínica Vida Saudável', 'Saúde', '2021-07-25', 90),

-- Clientes Médios (score 50-79) - 10 clientes
(UUID 'a1000007-0000-0000-0000-000000000007', 'MegaVarejo S.A.', 'Varejo', '2021-10-30', 72),
(UUID 'a1000008-0000-0000-0000-000000000008', 'TechInova Sistemas', 'Tecnologia', '2022-01-15', 68),
(UUID 'a1000009-0000-0000-0000-000000000009', 'Construtora Nova Era', 'Construção', '2022-04-22', 65),
(UUID 'a1000010-0000-0000-0000-000000000010', 'Supermercado Bom Preço', 'Varejo', '2022-08-07', 60),
(UUID 'a1000011-0000-0000-0000-000000000011', 'Transportadora Rápida', 'Logística', '2022-11-19', 71),
(UUID 'a1000012-0000-0000-0000-000000000012', 'Escola Futuro Brilhante', 'Educação', '2023-02-28', 58),
(UUID 'a1000013-0000-0000-0000-000000000013', 'Restaurante Sabor Caseiro', 'Alimentação', '2023-06-14', 62),
(UUID 'a1000014-0000-0000-0000-000000000014', 'Farmácia Popular', 'Saúde', '2023-09-20', 55),
(UUID 'a1000015-0000-0000-0000-000000000015', 'Gráfica Rápida Express', 'Serviços', '2024-01-10', 52),
(UUID 'a1000016-0000-0000-0000-000000000016', 'E-commerce Digital Store', 'Varejo', '2024-04-05', 66),

-- Clientes Baixo Score (score 20-49) - 6 clientes
(UUID 'a1000017-0000-0000-0000-000000000017', 'Colégio Futuro', 'Educação', '2023-06-14', 38),
(UUID 'a1000018-0000-0000-0000-000000000018', 'Padaria Pão Quente', 'Alimentação', '2024-02-19', 32),
(UUID 'a1000019-0000-0000-0000-000000000019', 'Auto Peças Velozes', 'Automotivo', '2024-07-08', 28),
(UUID 'a1000020-0000-0000-0000-000000000020', 'Salão Beleza Natural', 'Serviços', '2025-01-15', 25),
(UUID 'a1000021-0000-0000-0000-000000000021', 'Pet Shop Amigo Fiel', 'Serviços', '2025-03-22', 30),
(UUID 'a1000022-0000-0000-0000-000000000022', 'Academia Corpo e Mente', 'Esporte', '2025-06-10', 35),

-- Clientes Recentes (2026) - 3 clientes (para treinamento)
(UUID 'a1000023-0000-0000-0000-000000000023', 'Startup InovaTech', 'Tecnologia', '2026-01-10', 20),
(UUID 'a1000024-0000-0000-0000-000000000024', 'Consultoria Gestão Total', 'Serviços', '2026-02-05', 18),
(UUID 'a1000025-0000-0000-0000-000000000025', 'Mercado Orgânico Natural', 'Alimentação', '2026-03-15', 15);

-- ===== VENDAS (55 vendas distribuídas últimos 12 meses - maio/2025 a maio/2026) =====
INSERT INTO venda (id, data, valor, status, comissao_paga, cliente_id, vendedor_id)
VALUES
-- VENDAS VENDEDOR OURO 1 (Carlos) - Clientes premium, vendas altas
(UUID 'a2000001-0000-0000-0000-000000000001', '2025-06-15', 58000.00, 'CONCLUIDA', 2900.00, UUID 'a1000001-0000-0000-0000-000000000001', UUID 'a0000001-0000-0000-0000-000000000001'),
(UUID 'a2000002-0000-0000-0000-000000000002', '2025-07-20', 75000.00, 'CONCLUIDA', 3750.00, UUID 'a1000002-0000-0000-0000-000000000002', UUID 'a0000001-0000-0000-0000-000000000001'),
(UUID 'a2000003-0000-0000-0000-000000000003', '2025-08-10', 43000.00, 'CONCLUIDA', 2150.00, UUID 'a1000005-0000-0000-0000-000000000005', UUID 'a0000001-0000-0000-0000-000000000001'),
(UUID 'a2000004-0000-0000-0000-000000000004', '2025-09-25', 125000.00, 'CONCLUIDA', 6250.00, UUID 'a1000003-0000-0000-0000-000000000003', UUID 'a0000001-0000-0000-0000-000000000001'),
(UUID 'a2000005-0000-0000-0000-000000000005', '2025-11-05', 34000.00, 'CONCLUIDA', 1700.00, UUID 'a1000007-0000-0000-0000-000000000007', UUID 'a0000001-0000-0000-0000-000000000001'),
(UUID 'a2000006-0000-0000-0000-000000000006', '2025-12-12', 89000.00, 'CONCLUIDA', 4450.00, UUID 'a1000004-0000-0000-0000-000000000004', UUID 'a0000001-0000-0000-0000-000000000001'),
(UUID 'a2000007-0000-0000-0000-000000000007', '2026-01-18', 62000.00, 'CONCLUIDA', 3100.00, UUID 'a1000006-0000-0000-0000-000000000006', UUID 'a0000001-0000-0000-0000-000000000001'),
(UUID 'a2000008-0000-0000-0000-000000000008', '2026-02-22', 47000.00, 'CONCLUIDA', 2350.00, UUID 'a1000001-0000-0000-0000-000000000001', UUID 'a0000001-0000-0000-0000-000000000001'),
(UUID 'a2000009-0000-0000-0000-000000000009', '2026-03-28', 105000.00, 'CONCLUIDA', 5250.00, UUID 'a1000002-0000-0000-0000-000000000002', UUID 'a0000001-0000-0000-0000-000000000001'),
(UUID 'a2000010-0000-0000-0000-000000000010', '2026-04-15', 56000.00, 'CONCLUIDA', 2800.00, UUID 'a1000008-0000-0000-0000-000000000008', UUID 'a0000001-0000-0000-0000-000000000001'),
(UUID 'a2000011-0000-0000-0000-000000000011', '2026-05-10', 72000.00, 'CONCLUIDA', 3600.00, UUID 'a1000003-0000-0000-0000-000000000003', UUID 'a0000001-0000-0000-0000-000000000001'),

-- VENDAS VENDEDOR OURO 2 (Ana) - Muitas vendas, alguns cancelamentos
(UUID 'a2000012-0000-0000-0000-000000000012', '2025-06-08', 51000.00, 'CONCLUIDA', 2550.00, UUID 'a1000004-0000-0000-0000-000000000004', UUID 'a0000002-0000-0000-0000-000000000002'),
(UUID 'a2000013-0000-0000-0000-000000000013', '2025-07-15', 67000.00, 'CONCLUIDA', 3350.00, UUID 'a1000006-0000-0000-0000-000000000006', UUID 'a0000002-0000-0000-0000-000000000002'),
(UUID 'a2000014-0000-0000-0000-000000000014', '2025-08-30', 28000.00, 'CANCELADA', 0.00, UUID 'a1000010-0000-0000-0000-000000000010', UUID 'a0000002-0000-0000-0000-000000000002'),
(UUID 'a2000015-0000-0000-0000-000000000015', '2025-10-12', 83000.00, 'CONCLUIDA', 4150.00, UUID 'a1000001-0000-0000-0000-000000000001', UUID 'a0000002-0000-0000-0000-000000000002'),
(UUID 'a2000016-0000-0000-0000-000000000016', '2025-11-18', 44000.00, 'CONCLUIDA', 2200.00, UUID 'a1000009-0000-0000-0000-000000000009', UUID 'a0000002-0000-0000-0000-000000000002'),
(UUID 'a2000017-0000-0000-0000-000000000017', '2025-12-05', 91000.00, 'CONCLUIDA', 4550.00, UUID 'a1000002-0000-0000-0000-000000000002', UUID 'a0000002-0000-0000-0000-000000000002'),
(UUID 'a2000018-0000-0000-0000-000000000018', '2026-01-25', 38000.00, 'EM_ANALISE', 0.00, UUID 'a1000015-0000-0000-0000-000000000015', UUID 'a0000002-0000-0000-0000-000000000002'),
(UUID 'a2000019-0000-0000-0000-000000000019', '2026-02-10', 29000.00, 'CONCLUIDA', 1450.00, UUID 'a1000011-0000-0000-0000-000000000011', UUID 'a0000002-0000-0000-0000-000000000002'),
(UUID 'a2000020-0000-0000-0000-000000000020', '2026-03-05', 77000.00, 'CONCLUIDA', 3850.00, UUID 'a1000005-0000-0000-0000-000000000005', UUID 'a0000002-0000-0000-0000-000000000002'),
(UUID 'a2000021-0000-0000-0000-000000000021', '2026-04-28', 64000.00, 'CONCLUIDA', 3200.00, UUID 'a1000008-0000-0000-0000-000000000008', UUID 'a0000002-0000-0000-0000-000000000002'),
(UUID 'a2000022-0000-0000-0000-000000000022', '2026-05-12', 52000.00, 'CONCLUIDA', 2600.00, UUID 'a1000003-0000-0000-0000-000000000003', UUID 'a0000002-0000-0000-0000-000000000002'),

-- VENDAS VENDEDOR OURO 3 (Roberto) - Vendas consistentes
(UUID 'a2000023-0000-0000-0000-000000000023', '2025-07-22', 49000.00, 'CONCLUIDA', 2450.00, UUID 'a1000012-0000-0000-0000-000000000012', UUID 'a0000003-0000-0000-0000-000000000003'),
(UUID 'a2000024-0000-0000-0000-000000000024', '2025-09-10', 71000.00, 'CONCLUIDA', 3550.00, UUID 'a1000003-0000-0000-0000-000000000003', UUID 'a0000003-0000-0000-0000-000000000003'),
(UUID 'a2000025-0000-0000-0000-000000000025', '2025-10-28', 36000.00, 'CANCELADA', 0.00, UUID 'a1000016-0000-0000-0000-000000000016', UUID 'a0000003-0000-0000-0000-000000000003'),
(UUID 'a2000026-0000-0000-0000-000000000026', '2025-12-15', 97000.00, 'CONCLUIDA', 4850.00, UUID 'a1000006-0000-0000-0000-000000000006', UUID 'a0000003-0000-0000-0000-000000000003'),
(UUID 'a2000027-0000-0000-0000-000000000027', '2026-01-05', 45000.00, 'CONCLUIDA', 2250.00, UUID 'a1000013-0000-0000-0000-000000000013', UUID 'a0000003-0000-0000-0000-000000000003'),
(UUID 'a2000028-0000-0000-0000-000000000028', '2026-02-18', 82000.00, 'CONCLUIDA', 4100.00, UUID 'a1000004-0000-0000-0000-000000000004', UUID 'a0000003-0000-0000-0000-000000000003'),
(UUID 'a2000029-0000-0000-0000-000000000029', '2026-03-30', 54000.00, 'CONCLUIDA', 2700.00, UUID 'a1000014-0000-0000-0000-000000000014', UUID 'a0000003-0000-0000-0000-000000000003'),
(UUID 'a2000030-0000-0000-0000-000000000030', '2026-04-20', 68000.00, 'CONCLUIDA', 3400.00, UUID 'a1000001-0000-0000-0000-000000000001', UUID 'a0000003-0000-0000-0000-000000000003'),

-- VENDAS VENDEDORES PRATA (Maria e Patrícia) - Vendas moderadas
(UUID 'a2000031-0000-0000-0000-000000000031', '2025-08-18', 22000.00, 'CONCLUIDA', 1100.00, UUID 'a1000010-0000-0000-0000-000000000010', UUID 'a0000004-0000-0000-0000-000000000004'),
(UUID 'a2000032-0000-0000-0000-000000000032', '2025-10-05', 18500.00, 'CONCLUIDA', 925.00, UUID 'a1000011-0000-0000-0000-000000000011', UUID 'a0000004-0000-0000-0000-000000000004'),
(UUID 'a2000033-0000-0000-0000-000000000033', '2025-11-22', 31500.00, 'CONCLUIDA', 1575.00, UUID 'a1000007-0000-0000-0000-000000000007', UUID 'a0000004-0000-0000-0000-000000000004'),
(UUID 'a2000034-0000-0000-0000-000000000034', '2026-01-12', 27000.00, 'CONCLUIDA', 1350.00, UUID 'a1000015-0000-0000-0000-000000000015', UUID 'a0000004-0000-0000-0000-000000000004'),
(UUID 'a2000035-0000-0000-0000-000000000035', '2026-02-28', 19300.00, 'EM_ANALISE', 0.00, UUID 'a1000016-0000-0000-0000-000000000016', UUID 'a0000004-0000-0000-0000-000000000004'),
(UUID 'a2000036-0000-0000-0000-000000000036', '2026-04-07', 34000.00, 'CONCLUIDA', 1700.00, UUID 'a1000009-0000-0000-0000-000000000009', UUID 'a0000004-0000-0000-0000-000000000004'),
(UUID 'a2000037-0000-0000-0000-000000000037', '2025-09-03', 15600.00, 'CONCLUIDA', 780.00, UUID 'a1000017-0000-0000-0000-000000000017', UUID 'a0000005-0000-0000-0000-000000000005'),
(UUID 'a2000038-0000-0000-0000-000000000038', '2025-11-28', 24300.00, 'CONCLUIDA', 1215.00, UUID 'a1000013-0000-0000-0000-000000000013', UUID 'a0000005-0000-0000-0000-000000000005'),
(UUID 'a2000039-0000-0000-0000-000000000039', '2026-01-30', 28000.00, 'CANCELADA', 0.00, UUID 'a1000018-0000-0000-0000-000000000018', UUID 'a0000005-0000-0000-0000-000000000005'),
(UUID 'a2000040-0000-0000-0000-000000000040', '2026-03-15', 19500.00, 'CONCLUIDA', 975.00, UUID 'a1000019-0000-0000-0000-000000000019', UUID 'a0000005-0000-0000-0000-000000000005'),
(UUID 'a2000041-0000-0000-0000-000000000041', '2026-05-05', 22000.00, 'CONCLUIDA', 1100.00, UUID 'a1000014-0000-0000-0000-000000000014', UUID 'a0000005-0000-0000-0000-000000000005'),

-- VENDAS VENDEDORES BRONZE (João e Luciana) - Poucas vendas, algumas canceladas
(UUID 'a2000042-0000-0000-0000-000000000042', '2025-12-08', 8700.00, 'CONCLUIDA', 435.00, UUID 'a1000020-0000-0000-0000-000000000020', UUID 'a0000006-0000-0000-0000-000000000006'),
(UUID 'a2000043-0000-0000-0000-000000000043', '2026-02-20', 12400.00, 'CONCLUIDA', 620.00, UUID 'a1000017-0000-0000-0000-000000000017', UUID 'a0000006-0000-0000-0000-000000000006'),
(UUID 'a2000044-0000-0000-0000-000000000044', '2026-04-12', 5300.00, 'CANCELADA', 0.00, UUID 'a1000021-0000-0000-0000-000000000021', UUID 'a0000006-0000-0000-0000-000000000006'),
(UUID 'a2000045-0000-0000-0000-000000000045', '2026-05-18', 9800.00, 'CONCLUIDA', 490.00, UUID 'a1000022-0000-0000-0000-000000000022', UUID 'a0000006-0000-0000-0000-000000000006'),
(UUID 'a2000046-0000-0000-0000-000000000046', '2026-01-08', 6700.00, 'CONCLUIDA', 335.00, UUID 'a1000018-0000-0000-0000-000000000018', UUID 'a0000007-0000-0000-0000-000000000007'),
(UUID 'a2000047-0000-0000-0000-000000000047', '2026-03-22', 11200.00, 'EM_ANALISE', 0.00, UUID 'a1000019-0000-0000-0000-000000000019', UUID 'a0000007-0000-0000-0000-000000000007'),
(UUID 'a2000048-0000-0000-0000-000000000048', '2026-05-08', 4500.00, 'CONCLUIDA', 225.00, UUID 'a1000020-0000-0000-0000-000000000020', UUID 'a0000007-0000-0000-0000-000000000007'),

-- VENDAS VENDEDOR TREINAMENTO (Lucas) - Clientes novos, vendas pequenas, poucas concluídas
(UUID 'a2000049-0000-0000-0000-000000000049', '2026-02-14', 2800.00, 'CONCLUIDA', 140.00, UUID 'a1000023-0000-0000-0000-000000000023', UUID 'a0000008-0000-0000-0000-000000000008'),
(UUID 'a2000050-0000-0000-0000-000000000050', '2026-03-10', 1500.00, 'CANCELADA', 0.00, UUID 'a1000024-0000-0000-0000-000000000024', UUID 'a0000008-0000-0000-0000-000000000008'),
(UUID 'a2000051-0000-0000-0000-000000000051', '2026-04-05', 1950.00, 'CONCLUIDA', 97.50, UUID 'a1000025-0000-0000-0000-000000000025', UUID 'a0000008-0000-0000-0000-000000000008'),
(UUID 'a2000052-0000-0000-0000-000000000052', '2026-05-01', 2200.00, 'EM_ANALISE', 0.00, UUID 'a1000023-0000-0000-0000-000000000023', UUID 'a0000008-0000-0000-0000-000000000008'),

-- Clientes com pouca atividade (potencial churn) - 3 clientes sem vendas recentes
(UUID 'a2000053-0000-0000-0000-000000000053', '2025-03-20', 8000.00, 'CONCLUIDA', 400.00, UUID 'a1000017-0000-0000-0000-000000000017', UUID 'a0000004-0000-0000-0000-000000000004'),
(UUID 'a2000054-0000-0000-0000-000000000054', '2025-04-10', 5200.00, 'CONCLUIDA', 260.00, UUID 'a1000018-0000-0000-0000-000000000018', UUID 'a0000005-0000-0000-0000-000000000005'),
(UUID 'a2000055-0000-0000-0000-000000000055', '2024-12-01', 3500.00, 'CANCELADA', 0.00, UUID 'a1000019-0000-0000-0000-000000000019', UUID 'a0000006-0000-0000-0000-000000000006');

-- ===== INTERAÇÕES (100 interações distribuídas, avaliacoes coerentes) =====
INSERT INTO interacao (id, data_hora, canal, duracao, avaliacao, cliente_id, vendedor_id)
VALUES
-- VENDEDOR OURO 1 (Carlos) - Muitas interações, altas avaliações
(UUID 'a3000001-0000-0000-0000-000000000001', '2025-06-10 10:30:00', 'TELEFONE', 15, 5, UUID 'a1000001-0000-0000-0000-000000000001', UUID 'a0000001-0000-0000-0000-000000000001'),
(UUID 'a3000002-0000-0000-0000-000000000002', '2025-06-12 14:00:00', 'WHATSAPP', 8, 4, UUID 'a1000001-0000-0000-0000-000000000001', UUID 'a0000001-0000-0000-0000-000000000001'),
(UUID 'a3000003-0000-0000-0000-000000000003', '2025-07-18 11:15:00', 'REUNIAO', 55, 5, UUID 'a1000002-0000-0000-0000-000000000002', UUID 'a0000001-0000-0000-0000-000000000001'),
(UUID 'a3000004-0000-0000-0000-000000000004', '2025-07-22 09:00:00', 'EMAIL', 5, 5, UUID 'a1000002-0000-0000-0000-000000000002', UUID 'a0000001-0000-0000-0000-000000000001'),
(UUID 'a3000005-0000-0000-0000-000000000005', '2025-08-05 15:30:00', 'TELEFONE', 12, 5, UUID 'a1000005-0000-0000-0000-000000000005', UUID 'a0000001-0000-0000-0000-000000000001'),
(UUID 'a3000006-0000-0000-0000-000000000006', '2025-09-20 10:45:00', 'REUNIAO', 70, 5, UUID 'a1000003-0000-0000-0000-000000000003', UUID 'a0000001-0000-0000-0000-000000000001'),
(UUID 'a3000007-0000-0000-0000-000000000007', '2025-10-15 13:20:00', 'WHATSAPP', 10, 4, UUID 'a1000007-0000-0000-0000-000000000007', UUID 'a0000001-0000-0000-0000-000000000001'),
(UUID 'a3000008-0000-0000-0000-000000000008', '2025-11-02 16:00:00', 'TELEFONE', 20, 5, UUID 'a1000004-0000-0000-0000-000000000004', UUID 'a0000001-0000-0000-0000-000000000001'),
(UUID 'a3000009-0000-0000-0000-000000000009', '2025-12-08 09:30:00', 'REUNIAO', 60, 5, UUID 'a1000006-0000-0000-0000-000000000006', UUID 'a0000001-0000-0000-0000-000000000001'),
(UUID 'a3000010-0000-0000-0000-000000000010', '2026-01-15 14:45:00', 'EMAIL', 4, 4, UUID 'a1000001-0000-0000-0000-000000000001', UUID 'a0000001-0000-0000-0000-000000000001'),
(UUID 'a3000011-0000-0000-0000-000000000011', '2026-02-10 11:00:00', 'WHATSAPP', 12, 5, UUID 'a1000002-0000-0000-0000-000000000002', UUID 'a0000001-0000-0000-0000-000000000001'),
(UUID 'a3000012-0000-0000-0000-000000000012', '2026-03-20 15:00:00', 'TELEFONE', 18, 4, UUID 'a1000008-0000-0000-0000-000000000008', UUID 'a0000001-0000-0000-0000-000000000001'),
(UUID 'a3000013-0000-0000-0000-000000000013', '2026-04-10 10:15:00', 'REUNIAO', 65, 5, UUID 'a1000003-0000-0000-0000-000000000003', UUID 'a0000001-0000-0000-0000-000000000001'),
(UUID 'a3000014-0000-0000-0000-000000000014', '2026-05-05 09:30:00', 'EMAIL', 6, 5, UUID 'a1000004-0000-0000-0000-000000000004', UUID 'a0000001-0000-0000-0000-000000000001'),

-- VENDEDOR OURO 2 (Ana) - Interações positivas
(UUID 'a3000015-0000-0000-0000-000000000015', '2025-06-05 14:20:00', 'TELEFONE', 14, 5, UUID 'a1000004-0000-0000-0000-000000000004', UUID 'a0000002-0000-0000-0000-000000000002'),
(UUID 'a3000016-0000-0000-0000-000000000016', '2025-07-10 11:45:00', 'WHATSAPP', 7, 4, UUID 'a1000006-0000-0000-0000-000000000006', UUID 'a0000002-0000-0000-0000-000000000002'),
(UUID 'a3000017-0000-0000-0000-000000000017', '2025-08-28 16:00:00', 'REUNIAO', 50, 5, UUID 'a1000001-0000-0000-0000-000000000001', UUID 'a0000002-0000-0000-0000-000000000002'),
(UUID 'a3000018-0000-0000-0000-000000000018', '2025-10-08 10:30:00', 'EMAIL', 4, 4, UUID 'a1000009-0000-0000-0000-000000000009', UUID 'a0000002-0000-0000-0000-000000000002'),
(UUID 'a3000019-0000-0000-0000-000000000019', '2025-11-15 13:15:00', 'TELEFONE', 22, 5, UUID 'a1000002-0000-0000-0000-000000000002', UUID 'a0000002-0000-0000-0000-000000000002'),
(UUID 'a3000020-0000-0000-0000-000000000020', '2025-12-02 09:00:00', 'REUNIAO', 45, 5, UUID 'a1000011-0000-0000-0000-000000000011', UUID 'a0000002-0000-0000-0000-000000000002'),
(UUID 'a3000021-0000-0000-0000-000000000021', '2026-01-20 15:30:00', 'WHATSAPP', 9, 4, UUID 'a1000005-0000-0000-0000-000000000005', UUID 'a0000002-0000-0000-0000-000000000002'),
(UUID 'a3000022-0000-0000-0000-000000000022', '2026-02-05 11:00:00', 'TELEFONE', 16, 5, UUID 'a1000008-0000-0000-0000-000000000008', UUID 'a0000002-0000-0000-0000-000000000002'),
(UUID 'a3000023-0000-0000-0000-000000000023', '2026-03-25 14:00:00', 'EMAIL', 5, 4, UUID 'a1000003-0000-0000-0000-000000000003', UUID 'a0000002-0000-0000-0000-000000000002'),
(UUID 'a3000024-0000-0000-0000-000000000024', '2026-04-18 10:45:00', 'REUNIAO', 58, 5, UUID 'a1000007-0000-0000-0000-000000000007', UUID 'a0000002-0000-0000-0000-000000000002'),
(UUID 'a3000025-0000-0000-0000-000000000025', '2026-05-08 09:15:00', 'WHATSAPP', 11, 5, UUID 'a1000010-0000-0000-0000-000000000010', UUID 'a0000002-0000-0000-0000-000000000002'),

-- VENDEDOR OURO 3 (Roberto) - Interações boas
(UUID 'a3000026-0000-0000-0000-000000000026', '2025-07-18 13:30:00', 'TELEFONE', 13, 4, UUID 'a1000012-0000-0000-0000-000000000012', UUID 'a0000003-0000-0000-0000-000000000003'),
(UUID 'a3000027-0000-0000-0000-000000000027', '2025-09-05 15:00:00', 'REUNIAO', 65, 5, UUID 'a1000003-0000-0000-0000-000000000003', UUID 'a0000003-0000-0000-0000-000000000003'),
(UUID 'a3000028-0000-0000-0000-000000000028', '2025-10-25 11:30:00', 'WHATSAPP', 8, 4, UUID 'a1000013-0000-0000-0000-000000000013', UUID 'a0000003-0000-0000-0000-000000000003'),
(UUID 'a3000029-0000-0000-0000-000000000029', '2025-12-10 09:45:00', 'EMAIL', 3, 3, UUID 'a1000006-0000-0000-0000-000000000006', UUID 'a0000003-0000-0000-0000-000000000003'),
(UUID 'a3000030-0000-0000-0000-000000000030', '2026-01-03 14:20:00', 'TELEFONE', 19, 5, UUID 'a1000014-0000-0000-0000-000000000014', UUID 'a0000003-0000-0000-0000-000000000003'),
(UUID 'a3000031-0000-0000-0000-000000000031', '2026-02-12 10:00:00', 'REUNIAO', 52, 5, UUID 'a1000004-0000-0000-0000-000000000004', UUID 'a0000003-0000-0000-0000-000000000003'),
(UUID 'a3000032-0000-0000-0000-000000000032', '2026-03-18 16:30:00', 'WHATSAPP', 7, 4, UUID 'a1000001-0000-0000-0000-000000000001', UUID 'a0000003-0000-0000-0000-000000000003'),
(UUID 'a3000033-0000-0000-0000-000000000033', '2026-04-22 11:15:00', 'TELEFONE', 14, 5, UUID 'a1000015-0000-0000-0000-000000000015', UUID 'a0000003-0000-0000-0000-000000000003'),

-- VENDEDORES PRATA - Interações variadas
(UUID 'a3000034-0000-0000-0000-000000000034', '2025-08-15 10:00:00', 'TELEFONE', 10, 3, UUID 'a1000010-0000-0000-0000-000000000010', UUID 'a0000004-0000-0000-0000-000000000004'),
(UUID 'a3000035-0000-0000-0000-000000000035', '2025-10-02 14:30:00', 'EMAIL', 6, 4, UUID 'a1000011-0000-0000-0000-000000000011', UUID 'a0000004-0000-0000-0000-000000000004'),
(UUID 'a3000036-0000-0000-0000-000000000036', '2025-11-18 09:15:00', 'WHATSAPP', 12, 4, UUID 'a1000007-0000-0000-0000-000000000007', UUID 'a0000004-0000-0000-0000-000000000004'),
(UUID 'a3000037-0000-0000-0000-000000000037', '2026-01-08 16:00:00', 'TELEFONE', 15, 4, UUID 'a1000015-0000-0000-0000-000000000015', UUID 'a0000004-0000-0000-0000-000000000004'),
(UUID 'a3000038-0000-0000-0000-000000000038', '2026-02-25 11:45:00', 'REUNIAO', 40, 4, UUID 'a1000016-0000-0000-0000-000000000016', UUID 'a0000004-0000-0000-0000-000000000004'),
(UUID 'a3000039-0000-0000-0000-000000000039', '2026-04-03 13:30:00', 'EMAIL', 5, 3, UUID 'a1000009-0000-0000-0000-000000000009', UUID 'a0000004-0000-0000-0000-000000000004'),
(UUID 'a3000040-0000-0000-0000-000000000040', '2025-09-01 10:15:00', 'TELEFONE', 8, 3, UUID 'a1000017-0000-0000-0000-000000000017', UUID 'a0000005-0000-0000-0000-000000000005'),
(UUID 'a3000041-0000-0000-0000-000000000041', '2025-11-25 14:45:00', 'WHATSAPP', 9, 4, UUID 'a1000013-0000-0000-0000-000000000013', UUID 'a0000005-0000-0000-0000-000000000005'),
(UUID 'a3000042-0000-0000-0000-000000000042', '2026-01-28 11:00:00', 'TELEFONE', 12, 2, UUID 'a1000018-0000-0000-0000-000000000018', UUID 'a0000005-0000-0000-0000-000000000005'),
(UUID 'a3000043-0000-0000-0000-000000000043', '2026-03-10 16:20:00', 'EMAIL', 4, 3, UUID 'a1000019-0000-0000-0000-000000000019', UUID 'a0000005-0000-0000-0000-000000000005'),
(UUID 'a3000044-0000-0000-0000-000000000044', '2026-05-02 09:30:00', 'REUNIAO', 35, 4, UUID 'a1000014-0000-0000-0000-000000000014', UUID 'a0000005-0000-0000-0000-000000000005'),

-- VENDEDORES BRONZE - Interações médias/baixas
(UUID 'a3000045-0000-0000-0000-000000000045', '2025-12-05 13:00:00', 'TELEFONE', 25, 3, UUID 'a1000020-0000-0000-0000-000000000020', UUID 'a0000006-0000-0000-0000-000000000006'),
(UUID 'a3000046-0000-0000-0000-000000000046', '2026-02-18 10:30:00', 'EMAIL', 8, 2, UUID 'a1000017-0000-0000-0000-000000000017', UUID 'a0000006-0000-0000-0000-000000000006'),
(UUID 'a3000047-0000-0000-0000-000000000047', '2026-04-08 15:45:00', 'WHATSAPP', 6, 3, UUID 'a1000021-0000-0000-0000-000000000021', UUID 'a0000006-0000-0000-0000-000000000006'),
(UUID 'a3000048-0000-0000-0000-000000000048', '2026-05-15 11:20:00', 'TELEFONE', 18, 3, UUID 'a1000022-0000-0000-0000-000000000022', UUID 'a0000006-0000-0000-0000-000000000006'),
(UUID 'a3000049-0000-0000-0000-000000000049', '2026-01-05 09:45:00', 'TELEFONE', 10, 3, UUID 'a1000018-0000-0000-0000-000000000018', UUID 'a0000007-0000-0000-0000-000000000007'),
(UUID 'a3000050-0000-0000-0000-000000000050', '2026-03-18 14:00:00', 'WHATSAPP', 7, 2, UUID 'a1000019-0000-0000-0000-000000000019', UUID 'a0000007-0000-0000-0000-000000000007'),
(UUID 'a3000051-0000-0000-0000-000000000051', '2026-05-05 16:30:00', 'EMAIL', 5, 3, UUID 'a1000020-0000-0000-0000-000000000020', UUID 'a0000007-0000-0000-0000-000000000007'),

-- VENDEDOR TREINAMENTO (Lucas) - Interações com clientes novos, avaliacoes baixas
(UUID 'a3000052-0000-0000-0000-000000000052', '2026-02-10 11:15:00', 'TELEFONE', 22, 2, UUID 'a1000023-0000-0000-0000-000000000023', UUID 'a0000008-0000-0000-0000-000000000008'),
(UUID 'a3000053-0000-0000-0000-000000000053', '2026-02-28 14:30:00', 'EMAIL', 7, 2, UUID 'a1000023-0000-0000-0000-000000000023', UUID 'a0000008-0000-0000-0000-000000000008'),
(UUID 'a3000054-0000-0000-0000-000000000054', '2026-03-05 09:00:00', 'WHATSAPP', 15, 1, UUID 'a1000024-0000-0000-0000-000000000024', UUID 'a0000008-0000-0000-0000-000000000008'),
(UUID 'a3000055-0000-0000-0000-000000000055', '2026-03-22 16:45:00', 'TELEFONE', 30, 2, UUID 'a1000024-0000-0000-0000-000000000024', UUID 'a0000008-0000-0000-0000-000000000008'),
(UUID 'a3000056-0000-0000-0000-000000000056', '2026-04-02 10:30:00', 'REUNIAO', 25, 2, UUID 'a1000025-0000-0000-0000-000000000025', UUID 'a0000008-0000-0000-0000-000000000008'),
(UUID 'a3000057-0000-0000-0000-000000000057', '2026-04-28 13:15:00', 'EMAIL', 6, 1, UUID 'a1000025-0000-0000-0000-000000000025', UUID 'a0000008-0000-0000-0000-000000000008'),
(UUID 'a3000058-0000-0000-0000-000000000058', '2026-05-20 11:00:00', 'WHATSAPP', 10, 2, UUID 'a1000023-0000-0000-0000-000000000023', UUID 'a0000008-0000-0000-0000-000000000008'),

-- Interações adicionais para clientes com score médio/baixo (potencial churn)
(UUID 'a3000059-0000-0000-0000-000000000059', '2025-10-10 09:30:00', 'TELEFONE', 5, 2, UUID 'a1000017-0000-0000-0000-000000000017', UUID 'a0000004-0000-0000-0000-000000000004'),
(UUID 'a3000060-0000-0000-0000-000000000060', '2025-08-20 14:00:00', 'EMAIL', 3, 1, UUID 'a1000018-0000-0000-0000-000000000018', UUID 'a0000005-0000-0000-0000-000000000005'),
(UUID 'a3000061-0000-0000-0000-000000000061', '2025-11-15 11:45:00', 'TELEFONE', 8, 2, UUID 'a1000019-0000-0000-0000-000000000019', UUID 'a0000006-0000-0000-0000-000000000006'),
(UUID 'a3000062-0000-0000-0000-000000000062', '2026-01-10 15:30:00', 'WHATSAPP', 12, 3, UUID 'a1000020-0000-0000-0000-000000000020', UUID 'a0000007-0000-0000-0000-000000000007'),
(UUID 'a3000063-0000-0000-0000-000000000063', '2025-12-01 10:00:00', 'TELEFONE', 6, 2, UUID 'a1000021-0000-0000-0000-000000000021', UUID 'a0000006-0000-0000-0000-000000000006'),
(UUID 'a3000064-0000-0000-0000-000000000064', '2026-02-15 13:45:00', 'EMAIL', 4, 2, UUID 'a1000022-0000-0000-0000-000000000022', UUID 'a0000007-0000-0000-0000-000000000007'),

-- Interações para clientes premium com vendedores secundários
(UUID 'a3000065-0000-0000-0000-000000000065', '2026-03-12 14:30:00', 'TELEFONE', 18, 5, UUID 'a1000002-0000-0000-0000-000000000002', UUID 'a0000003-0000-0000-0000-000000000003'),
(UUID 'a3000066-0000-0000-0000-000000000066', '2026-04-25 11:00:00', 'REUNIAO', 45, 4, UUID 'a1000004-0000-0000-0000-000000000004', UUID 'a0000001-0000-0000-0000-000000000001'),
(UUID 'a3000067-0000-0000-0000-000000000067', '2026-05-15 09:30:00', 'WHATSAPP', 15, 5, UUID 'a1000006-0000-0000-0000-000000000006', UUID 'a0000002-0000-0000-0000-000000000002'),

-- Últimas interações para completar 67 (total próximo de 100)
(UUID 'a3000068-0000-0000-0000-000000000068', '2025-07-25 10:30:00', 'TELEFONE', 12, 4, UUID 'a1000011-0000-0000-0000-000000000011', UUID 'a0000004-0000-0000-0000-000000000004'),
(UUID 'a3000069-0000-0000-0000-000000000069', '2025-09-12 15:00:00', 'EMAIL', 5, 3, UUID 'a1000012-0000-0000-0000-000000000012', UUID 'a0000003-0000-0000-0000-000000000003'),
(UUID 'a3000070-0000-0000-0000-000000000070', '2026-01-22 13:20:00', 'WHATSAPP', 9, 4, UUID 'a1000013-0000-0000-0000-000000000013', UUID 'a0000004-0000-0000-0000-000000000004'),
(UUID 'a3000071-0000-0000-0000-000000000071', '2026-03-08 11:45:00', 'TELEFONE', 16, 4, UUID 'a1000014-0000-0000-0000-000000000014', UUID 'a0000005-0000-0000-0000-000000000005'),
(UUID 'a3000072-0000-0000-0000-000000000072', '2026-04-30 09:15:00', 'REUNIAO', 35, 3, UUID 'a1000015-0000-0000-0000-000000000015', UUID 'a0000003-0000-0000-0000-000000000003'),
(UUID 'a3000073-0000-0000-0000-000000000073', '2026-05-22 14:00:00', 'EMAIL', 4, 3, UUID 'a1000016-0000-0000-0000-000000000016', UUID 'a0000004-0000-0000-0000-000000000004'),
(UUID 'a3000074-0000-0000-0000-000000000074', '2025-12-18 10:15:00', 'TELEFONE', 7, 2, UUID 'a1000021-0000-0000-0000-000000000021', UUID 'a0000007-0000-0000-0000-000000000007'),
(UUID 'a3000075-0000-0000-0000-000000000075', '2026-01-28 16:30:00', 'WHATSAPP', 6, 2, UUID 'a1000022-0000-0000-0000-000000000022', UUID 'a0000006-0000-0000-0000-000000000006'),
(UUID 'a3000076-0000-0000-0000-000000000076', '2026-05-25 11:00:00', 'REUNIAO', 28, 3, UUID 'a1000023-0000-0000-0000-000000000023', UUID 'a0000008-0000-0000-0000-000000000008'),
(UUID 'a3000077-0000-0000-0000-000000000077', '2025-08-05 09:45:00', 'EMAIL', 4, 4, UUID 'a1000005-0000-0000-0000-000000000005', UUID 'a0000001-0000-0000-0000-000000000001'),
(UUID 'a3000078-0000-0000-0000-000000000078', '2025-11-20 15:30:00', 'TELEFONE', 11, 5, UUID 'a1000008-0000-0000-0000-000000000008', UUID 'a0000002-0000-0000-0000-000000000002'),
(UUID 'a3000079-0000-0000-0000-000000000079', '2026-02-18 13:45:00', 'WHATSAPP', 13, 4, UUID 'a1000010-0000-0000-0000-000000000010', UUID 'a0000004-0000-0000-0000-000000000004'),
(UUID 'a3000080-0000-0000-0000-000000000080', '2026-04-12 10:20:00', 'EMAIL', 5, 3, UUID 'a1000018-0000-0000-0000-000000000018', UUID 'a0000007-0000-0000-0000-000000000007'),
(UUID 'a3000081-0000-0000-0000-000000000081', '2025-10-30 14:15:00', 'TELEFONE', 20, 3, UUID 'a1000019-0000-0000-0000-000000000019', UUID 'a0000005-0000-0000-0000-000000000005'),
(UUID 'a3000082-0000-0000-0000-000000000082', '2026-03-28 11:30:00', 'WHATSAPP', 8, 2, UUID 'a1000020-0000-0000-0000-000000000020', UUID 'a0000008-0000-0000-0000-000000000008');

-- Resumo dos dados inseridos:
-- Vendedores: 8 (3 Ouro, 2 Prata, 2 Bronze, 1 Treinamento)
-- Clientes: 25 (6 Premium, 10 Médios, 6 Baixo Score, 3 Recentes)
-- Vendas: 55 (distribuídas mai/2025 a mai/2026)
-- Interações: 82 (avaliações coerentes com performance)
-- Score dos clientes reflete histórico de vendas/interações
-- Clientes 17-22 sem vendas recentes (potencial churn)
-- Treinamento: vendas pequenas e para clientes novos